--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,21 @@
-.chosen-container {
-    font-size: 12px !important;
+.select2-container {
+    font-size: 12px !important; 
 }
 
-.chosen-container .chosen-choices {
+.select2-container .select2-choices {
 	min-height: 29px;
 }
 
-.chosen-container-multi .chosen-choices li.search-field {
+.select2-container-multi .select-choices li.select2-search-field {
 	padding-top: 5px !important;
+}
+
+.loading-indicator {
+	display: inline-block;
+	vertical-align:top;
+	margin-top:5px;
+}
+
+.woocommerce table.form-table .select2-container {
+	display: inline-block !important;
 }
